public enum DifficultyLevel {
    BEGINNER, INTERMEDIATE, ADVANCED
}
