public class EnrollmentException extends Exception {
    
    public EnrollmentException(String message) {
        super(message);
    }
    
}
